new titles, reason why 3 is multiphase, solution section 2

--- a/docs/BlockSlide_1.ipynb
+++ b/docs/BlockSlide_1.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 36,
    "id": "48d93492",
    "metadata": {},
    "outputs": [],
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 37,
    "id": "36cc74de",
    "metadata": {},
    "outputs": [],
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 38,
    "id": "30bc9854",
    "metadata": {},
    "outputs": [],
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 39,
    "id": "e2c75a26",
    "metadata": {},
    "outputs": [],
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 40,
    "id": "1ac5247a",
    "metadata": {},
    "outputs": [],
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 41,
    "id": "6d278e6d",
    "metadata": {},
    "outputs": [],
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 42,
    "id": "876295ab",
    "metadata": {},
    "outputs": [],
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 43,
    "id": "8acb7b1f",
    "metadata": {},
    "outputs": [],
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 44,
    "id": "cf1c9e53",
    "metadata": {},
    "outputs": [],
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 45,
    "id": "e05fa48b",
    "metadata": {},
    "outputs": [],
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 46,
    "id": "519ea7d1",
    "metadata": {},
    "outputs": [],
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 47,
    "id": "1c33a6f7",
    "metadata": {},
    "outputs": [],
@@ -302,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 48,
    "id": "5164a6fb",
    "metadata": {},
    "outputs": [],
@@ -323,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 49,
    "id": "8874e0ff",
    "metadata": {},
    "outputs": [],
@@ -350,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 50,
    "id": "60af8ae8",
    "metadata": {},
    "outputs": [],
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 51,
    "id": "9851c13a",
    "metadata": {},
    "outputs": [],
@@ -390,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 52,
    "id": "0cfc0aa1",
    "metadata": {},
    "outputs": [
@@ -417,14 +417,14 @@
       "Initialising mesh iteration #1.\n",
       "===============================\n",
       "\n",
-      "Guess interpolated to iteration mesh in 640.58us.\n",
-      "Scaling initialised in 72.46us.\n",
-      "Initial guess scaled in 3.88us.\n",
-      "Scaling generated in 1.53ms.\n",
-      "NLP generated in 35.34ms.\n",
-      "Mesh-specific bounds generated in 193.96us.\n",
+      "Guess interpolated to iteration mesh in 742.04us.\n",
+      "Scaling initialised in 123.38us.\n",
+      "Initial guess scaled in 5.75us.\n",
+      "Scaling generated in 1.61ms.\n",
+      "NLP generated in 33.35ms.\n",
+      "Mesh-specific bounds generated in 206.33us.\n",
       "\n",
-      "Mesh iteration #1 initialised in 37.79ms.\n",
+      "Mesh iteration #1 initialised in 36.04ms.\n",
       "\n",
       "\n",
       "==========================\n",
@@ -481,23 +481,23 @@
       "Number of equality constraint Jacobian evaluations   = 13\n",
       "Number of inequality constraint Jacobian evaluations = 0\n",
       "Number of Lagrangian Hessian evaluations             = 12\n",
-      "Total seconds in IPOPT                               = 0.015\n",
+      "Total seconds in IPOPT                               = 0.013\n",
       "\n",
       "EXIT: Optimal Solution Found.\n",
       "      solver  :   t_proc      (avg)   t_wall      (avg)    n_eval\n",
-      "       nlp_f  |  15.00us (  1.15us)  14.04us (  1.08us)        13\n",
-      "       nlp_g  | 131.00us ( 10.08us)  92.50us (  7.12us)        13\n",
-      "  nlp_grad_f  |  30.00us (  2.00us)  26.83us (  1.79us)        15\n",
-      "  nlp_hess_l  | 114.00us (  9.50us) 107.00us (  8.92us)        12\n",
-      "   nlp_jac_g  | 166.00us ( 11.86us) 168.79us ( 12.06us)        14\n",
-      "       total  |  15.39ms ( 15.39ms)  15.52ms ( 15.52ms)         1\n",
+      "       nlp_f  |  16.00us (  1.23us)  13.46us (  1.04us)        13\n",
+      "       nlp_g  | 106.00us (  8.15us)  80.00us (  6.15us)        13\n",
+      "  nlp_grad_f  |  27.00us (  1.80us)  24.29us (  1.62us)        15\n",
+      "  nlp_hess_l  | 100.00us (  8.33us)  97.92us (  8.16us)        12\n",
+      "   nlp_jac_g  | 165.00us ( 11.79us) 165.04us ( 11.79us)        14\n",
+      "       total  |  13.98ms ( 13.98ms)  14.00ms ( 14.00ms)         1\n",
       "\n",
       "==================================\n",
       "Post-processing mesh iteration #1.\n",
       "==================================\n",
       "\n",
-      "Mesh iteration #1 solved in 15.80ms.\n",
-      "Mesh iteration #1 post-processed in 28.57ms.\n",
+      "Mesh iteration #1 solved in 14.29ms.\n",
+      "Mesh iteration #1 post-processed in 23.44ms.\n",
       "\n",
       "\n",
       "============================\n",
@@ -510,7 +510,7 @@
       "\n",
       "Adjusting Collocation Mesh: [10] mesh sections\n",
       "\n",
-      "Mesh iteration #1 completed in 82.16ms.\n",
+      "Mesh iteration #1 completed in 73.76ms.\n",
       "\n"
      ]
     },
@@ -580,6 +580,35 @@
    "cell_type": "markdown",
    "id": "97b06004",
    "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "d896c705",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1, 2, 31)"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.shape(problem.solution.state)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b7e5b402",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
