--- a/docs/BlockSlide_3.ipynb
+++ b/docs/BlockSlide_3.ipynb
@@ -5,14 +5,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Block Slide 3\n",
+    "# Path and Endpoint Constraints example\n",
     "## OCP Description\n",
-    "Lets introduce an extra dimension. Now the block can slide in 2D. We will assume the block is on 4 cartwheels and can move freely without friction. Lets add linear drag in both directions with a coefficient of friction of 1.05. The block starts at (1,-2) with zero speed, should reach the mid position (0,2) with any given speed, and final position (-1,-2) with zero speed, while dodging an circular object with a radius of 1[m] at (0,0) while minimizing input force."
+    "This example will show a more complex path constraint and how endpoint constraints are handeled. This example could be single phase because the dynamics do not change and all states are continious, but to explain how the endpoint constraints work the problem is split up into 2 phases.  \n",
+    "\n",
+    "For this example we will introduce an extra dimension compared to the previous example. Now the block can slide in 2D. We will assume the block is on 4 cartwheels and can move freely without friction. Lets add linear drag in both directions with a coefficient of friction of 1.05. The block starts at (1,-2) with zero speed, should reach the mid position (0,2) with any given speed, and final position (-1,-2) with zero speed, while dodging an circular object with a radius of 1[m] at (0,0) while minimizing input force."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -222,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -247,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -268,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
