--- a/docs/BlockSlide_2.ipynb
+++ b/docs/BlockSlide_2.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -214,14 +214,14 @@
       "Initialising mesh iteration #1.\n",
       "===============================\n",
       "\n",
-      "Guess interpolated to iteration mesh in 1.61ms.\n",
-      "Scaling initialised in 122.67us.\n",
-      "Initial guess scaled in 5.42us.\n",
-      "Scaling generated in 3.94ms.\n",
-      "NLP generated in 77.85ms.\n",
-      "Mesh-specific bounds generated in 268.33us.\n",
+      "Guess interpolated to iteration mesh in 707.62us.\n",
+      "Scaling initialised in 75.96us.\n",
+      "Initial guess scaled in 3.96us.\n",
+      "Scaling generated in 3.02ms.\n",
+      "NLP generated in 61.01ms.\n",
+      "Mesh-specific bounds generated in 284.37us.\n",
       "\n",
-      "Mesh iteration #1 initialised in 83.80ms.\n",
+      "Mesh iteration #1 initialised in 65.10ms.\n",
       "\n",
       "\n",
       "==========================\n",
@@ -281,23 +281,23 @@
       "Number of equality constraint Jacobian evaluations   = 16\n",
       "Number of inequality constraint Jacobian evaluations = 0\n",
       "Number of Lagrangian Hessian evaluations             = 15\n",
-      "Total seconds in IPOPT                               = 0.059\n",
+      "Total seconds in IPOPT                               = 0.020\n",
       "\n",
       "EXIT: Optimal Solution Found.\n",
       "      solver  :   t_proc      (avg)   t_wall      (avg)    n_eval\n",
-      "       nlp_f  |  32.00us (  1.78us)  19.84us (  1.10us)        18\n",
-      "       nlp_g  | 294.00us ( 16.33us) 261.59us ( 14.53us)        18\n",
-      "  nlp_grad_f  |  43.00us (  2.39us)  37.67us (  2.09us)        18\n",
-      "  nlp_hess_l  | 476.00us ( 31.73us) 465.21us ( 31.01us)        15\n",
-      "   nlp_jac_g  | 627.00us ( 36.88us) 629.12us ( 37.01us)        17\n",
-      "       total  |  28.49ms ( 28.49ms)  66.14ms ( 66.14ms)         1\n",
+      "       nlp_f  |  21.00us (  1.17us)  16.50us (916.78ns)        18\n",
+      "       nlp_g  | 256.00us ( 14.22us) 241.17us ( 13.40us)        18\n",
+      "  nlp_grad_f  |  34.00us (  1.89us)  29.33us (  1.63us)        18\n",
+      "  nlp_hess_l  | 454.00us ( 30.27us) 452.79us ( 30.19us)        15\n",
+      "   nlp_jac_g  | 610.00us ( 35.88us) 608.04us ( 35.77us)        17\n",
+      "       total  |  20.82ms ( 20.82ms)  20.82ms ( 20.82ms)         1\n",
       "\n",
       "==================================\n",
       "Post-processing mesh iteration #1.\n",
       "==================================\n",
       "\n",
-      "Mesh iteration #1 solved in 66.73ms.\n",
-      "Mesh iteration #1 post-processed in 51.56ms.\n",
+      "Mesh iteration #1 solved in 21.12ms.\n",
+      "Mesh iteration #1 post-processed in 43.58ms.\n",
       "\n",
       "\n",
       "============================\n",
@@ -310,7 +310,7 @@
       "\n",
       "Adjusting Collocation Mesh: [10, 10] mesh sections\n",
       "\n",
-      "Mesh iteration #1 completed in 202.10ms.\n",
+      "Mesh iteration #1 completed in 129.79ms.\n",
       "\n"
      ]
     },
@@ -372,14 +372,15 @@
    "metadata": {},
    "source": [
     "### Solution\n",
-    "To acces the found solution you can use `problem.solution.{}`. The most frequently used options are:\n",
+    "To acces the found solution you can use `problem.solution.{}`. The most frequently used options are:  \n",
+    "\n",
     "- `problem.solution.state`\n",
     "    Outputs a tuple where each index represents the solution per phase. The solution per phase is presented by an array for each state variable where the indices of these arrays represent the solution at the given collocation point. The solutions are ordered the same way you supplied the state variables.For example: In this case there are 2 phases (A and B), and 2 states (x, dx) with each 31 collocation points. Thus `problem.solution.state[0][1][23]` will output the 23rd collocation point of state variable 'dx' of phase 'A'. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -415,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
