--- a/docs/BlockSlide_3.ipynb
+++ b/docs/BlockSlide_3.ipynb
@@ -5,7 +5,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Path and Endpoint Constraints example\n",
+    "# Path and Endpoint Constraints Example\n",
     "## OCP Description\n",
     "This example will show a more complex path constraint and how endpoint constraints are handeled. This example could be single phase because the dynamics do not change and all states are continious, but to explain how the endpoint constraints work the problem is split up into 2 phases.  \n",
     "\n",
@@ -596,15 +596,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Solution\n",
-    "All results can be found in problem.solution, see [INSERT_LINK_TO_SOLUTION]"
+    "Here you can see the optimal trajectory through 3 points while minimising input and avoiding the circle. Blue indicates the first phase, orange the second phase."
    ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
