--- a/docs/BlockSlide_1.ipynb
+++ b/docs/BlockSlide_1.ipynb
@@ -8,17 +8,16 @@
    "source": [
     "# Single Phase Example\n",
     "## OCP Description\n",
-    "To first show simple implementation of an OptimalControlProblem(OCP) in pycollo we will solve a block slide. A block will be pushed in 1D by a force (Fx) and should reach a certain position ending with 0 speed with friction. The objective function is to minimize pushing force. To describe this problem we need two state variables (position x and speed dx), one control variable (Applied force Fx), and three static parameters variables to describe friction (gravitation g, mass m, and coefficient of friction mu). We will introduce a second order differential by means of the state equations to be able to solve the differential equations for the equations of motion."
+    "To first show simple implementation of an OptimalControlProblem(OCP) in pycollo we will solve a block slide. A block will be pushed in 1D by a force ($F_x$) and should reach a certain position ending with 0 speed with friction. The objective function is to minimize pushing force. To describe this problem we need two state variables (position $x$ and speed $dx$), one control variable (Applied force $F_x$), and three static parameters variables to describe friction (gravitation $g$, mass $m$, and coefficient of friction $\\mu$). We will introduce a second order differential by means of the state equations to be able to solve the differential equations for the equations of motion."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 99,
    "id": "48d93492",
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%capture\n",
     "# 1D Blockslide\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
@@ -52,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 100,
    "id": "36cc74de",
    "metadata": {},
    "outputs": [],
@@ -73,12 +72,12 @@
    "metadata": {},
    "source": [
     "## Problem specific auxiliary data\n",
-    "Non optimised static parameters should be assigned a numerical value. This is done through auxiliary data. Auxiliary data is a dictionary where symbols can be assigned to numerical values, or sympy expressions(we will show this later). If you want to exclude the variables from all equations in the OCP, you can make sure the variables are numerical before introducing them into the OCP_instance."
+    "Non optimised static parameters should be assigned a numerical value. This is done through auxiliary data. Auxiliary data is a dictionary where symbols can be assigned to numerical values, or sympy expressions(see [Phase specific auxiliary data](#Phase-specific-auxiliary-data)). If you want to exclude the variables from all equations in the OCP, you can make sure the variables are numerical before introducing them into the OCP_instance."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 101,
    "id": "30bc9854",
    "metadata": {},
    "outputs": [],
@@ -98,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 102,
    "id": "e2c75a26",
    "metadata": {},
    "outputs": [],
@@ -118,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 103,
    "id": "1ac5247a",
    "metadata": {},
    "outputs": [],
@@ -140,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 104,
    "id": "6d278e6d",
    "metadata": {},
    "outputs": [],
@@ -160,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 105,
    "id": "876295ab",
    "metadata": {},
    "outputs": [],
@@ -181,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 106,
    "id": "8acb7b1f",
    "metadata": {},
    "outputs": [],
@@ -206,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 107,
    "id": "cf1c9e53",
    "metadata": {},
    "outputs": [],
@@ -226,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 108,
    "id": "e05fa48b",
    "metadata": {},
    "outputs": [],
@@ -250,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 109,
    "id": "519ea7d1",
    "metadata": {},
    "outputs": [],
@@ -268,12 +267,12 @@
    "metadata": {},
    "source": [
     "## Phase specific auxiliary data\n",
-    "Secondly, you can provide it through auxiliary data, which results in fundamentally the same solution. Here you can see that auxiliary data can be used to assign expressions to variables. There are two kinds of auxiliary data: 1. Auxiliary data valid for all phases (problem.auxiliary_data) or specific per phase (phase_A.auxiliary_data). This can be helpful because constants can be different per phase."
+    "Secondly, you can provide it through auxiliary data, which results in fundamentally the same solution. Here you can see that auxiliary data can be used to assign expressions to variables. There are two kinds of auxiliary data: 1. Auxiliary data valid for all phases (`problem.auxiliary_data`) or specific per phase (`phase_A.auxiliary_data`). This can be helpful because constants can be different per phase."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 110,
    "id": "1c33a6f7",
    "metadata": {},
    "outputs": [],
@@ -302,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 111,
    "id": "5164a6fb",
    "metadata": {},
    "outputs": [],
@@ -318,12 +317,12 @@
    "metadata": {},
    "source": [
     "## Integrand functions\n",
-    "The only step left is to implement an objective function. The objective is to slide the block to the endpoint while minimizing input Fx. To make sure we minimize Fx over the whole time domain we should integrate Fx. To include negative effort in the equation we can square Fx. The bounds should be given for initial and final time, and the guess is a single number, since the output of the function will always result in a single number. "
+    "The only step left is to implement an objective function. The objective is to slide the block to the endpoint while minimizing input $F_x$. To make sure we minimize $F_x$ over the whole time domain we should integrate $F_x$. To include negative effort in the equation we can square $F_x$. The bounds should be given for initial and final time, and the guess is a single number, since the output of the function will always result in a single number. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 112,
    "id": "8874e0ff",
    "metadata": {},
    "outputs": [],
@@ -350,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 113,
    "id": "60af8ae8",
    "metadata": {},
    "outputs": [],
@@ -371,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 114,
    "id": "9851c13a",
    "metadata": {},
    "outputs": [],
@@ -390,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 115,
    "id": "0cfc0aa1",
    "metadata": {},
    "outputs": [
@@ -417,14 +416,14 @@
       "Initialising mesh iteration #1.\n",
       "===============================\n",
       "\n",
-      "Guess interpolated to iteration mesh in 742.04us.\n",
-      "Scaling initialised in 123.38us.\n",
-      "Initial guess scaled in 5.75us.\n",
-      "Scaling generated in 1.61ms.\n",
-      "NLP generated in 33.35ms.\n",
-      "Mesh-specific bounds generated in 206.33us.\n",
+      "Guess interpolated to iteration mesh in 655.46us.\n",
+      "Scaling initialised in 64.83us.\n",
+      "Initial guess scaled in 4.08us.\n",
+      "Scaling generated in 2.16ms.\n",
+      "NLP generated in 34.54ms.\n",
+      "Mesh-specific bounds generated in 206.12us.\n",
       "\n",
-      "Mesh iteration #1 initialised in 36.04ms.\n",
+      "Mesh iteration #1 initialised in 37.64ms.\n",
       "\n",
       "\n",
       "==========================\n",
@@ -481,23 +480,23 @@
       "Number of equality constraint Jacobian evaluations   = 13\n",
       "Number of inequality constraint Jacobian evaluations = 0\n",
       "Number of Lagrangian Hessian evaluations             = 12\n",
-      "Total seconds in IPOPT                               = 0.013\n",
+      "Total seconds in IPOPT                               = 0.012\n",
       "\n",
       "EXIT: Optimal Solution Found.\n",
       "      solver  :   t_proc      (avg)   t_wall      (avg)    n_eval\n",
-      "       nlp_f  |  16.00us (  1.23us)  13.46us (  1.04us)        13\n",
-      "       nlp_g  | 106.00us (  8.15us)  80.00us (  6.15us)        13\n",
-      "  nlp_grad_f  |  27.00us (  1.80us)  24.29us (  1.62us)        15\n",
-      "  nlp_hess_l  | 100.00us (  8.33us)  97.92us (  8.16us)        12\n",
-      "   nlp_jac_g  | 165.00us ( 11.79us) 165.04us ( 11.79us)        14\n",
-      "       total  |  13.98ms ( 13.98ms)  14.00ms ( 14.00ms)         1\n",
+      "       nlp_f  |  13.00us (  1.00us)  11.88us (913.69ns)        13\n",
+      "       nlp_g  |  84.00us (  6.46us)  70.88us (  5.45us)        13\n",
+      "  nlp_grad_f  |  22.00us (  1.47us)  21.38us (  1.43us)        15\n",
+      "  nlp_hess_l  |  91.00us (  7.58us)  90.25us (  7.52us)        12\n",
+      "   nlp_jac_g  | 155.00us ( 11.07us) 158.04us ( 11.29us)        14\n",
+      "       total  |  12.79ms ( 12.79ms)  12.79ms ( 12.79ms)         1\n",
       "\n",
       "==================================\n",
       "Post-processing mesh iteration #1.\n",
       "==================================\n",
       "\n",
-      "Mesh iteration #1 solved in 14.29ms.\n",
-      "Mesh iteration #1 post-processed in 23.44ms.\n",
+      "Mesh iteration #1 solved in 13.07ms.\n",
+      "Mesh iteration #1 post-processed in 23.62ms.\n",
       "\n",
       "\n",
       "============================\n",
@@ -510,7 +509,7 @@
       "\n",
       "Adjusting Collocation Mesh: [10] mesh sections\n",
       "\n",
-      "Mesh iteration #1 completed in 73.76ms.\n",
+      "Mesh iteration #1 completed in 74.32ms.\n",
       "\n"
      ]
     },
@@ -572,15 +571,8 @@
    "metadata": {},
    "source": [
     "## Solution\n",
-    "All results can be found in the OCP_instance.solution, see next example to see how to acces the solution."
+    "All results can be found in the `OCP_instance.solution`, see [next example](BlockSlide_2.rst) for accessing the solution."
    ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "id": "97b06004",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
