--- a/docs/BlockSlide_2.ipynb
+++ b/docs/BlockSlide_2.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Multiphase Example\n",
     "## OCP Description\n",
-    "Let's introduce a second phase to the previous example where the block will have to return to it's original position. Because we know friction will switch direction when we slide the block back, the equations of motion change. Since phase A will not change, lets copy everything up until we start initiating the objective function. "
+    "Let's introduce a second phase to the previous example where the block will have to return to it's original position. Because we know friction will switch direction when we slide the block back, the equations of motion change. One way of solving this optimization is to use a continious boolean function such as a [sigmoid function](https://en.wikipedia.org/wiki/Sigmoid_function). Due to the higher order optimization scheme pycollo uses, these functions are numerically unstable. Because we know when the equations change we can split up the optimization in two continious time phases to tackle this problem! Since phase A will not change, lets copy everything up until we start initiating the objective function. "
    ]
   },
   {
@@ -375,7 +375,7 @@
     "To acces the found solution you can use `problem.solution.{}`. The most frequently used options are:  \n",
     "\n",
     "- `problem.solution.state`\n",
-    "    Outputs a tuple where each index represents the solution per phase. The solution per phase is presented by an array for each state variable where the indices of these arrays represent the solution at the given collocation point. The solutions are ordered the same way you supplied the state variables.For example: In this case there are 2 phases (A and B), and 2 states (x, dx) with each 31 collocation points. Thus `problem.solution.state[0][1][23]` will output the 23rd collocation point of state variable 'dx' of phase 'A'. "
+    "    Outputs a tuple where each index represents the solution per phase. The solution per phase is presented by an array for each state variable where the indices of these arrays represent the solution at the given collocation point. The solutions are ordered the same way you supplied the state variables.For example: In this case there are 2 phases (A and B), and 2 states ($x$, $dx$) with each 31 collocation points. Thus `problem.solution.state[0][1][23]` will output the 23rd collocation point of state variable $dx$ of phase A. "
    ]
   },
   {
@@ -445,18 +445,6 @@
     "- `problem.solution.final time`\n",
     "    Outputs tuple of final times per phase"
    ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
