--- a/docs/BlockSlide_3.ipynb
+++ b/docs/BlockSlide_3.ipynb
@@ -60,7 +60,7 @@
    "metadata": {},
    "source": [
     "## States and Control\n",
-    "State bounds, control, and integrand functions will be the same as the previous example but with an added dimension. "
+    "State bounds, control, and integrand functions will be the same as the previous example but with an added dimension ($y$). "
    ]
   },
   {
@@ -146,7 +146,7 @@
     "## Path Constraints\n",
     "Path constraints or inequality constraints, are constraints made up of continious time variables in contradiction with endpoint constraints. Path constraints are relatively hard to solve for the optimizer and should not be used when not necessary. \n",
     "\n",
-    "The circular object with radius 1[m] located at (0,0) can be made with an inequality constraint. With the circle equation we can make sure x and y will be out of the circle at any time within phase A with a maximum of 10[m] distance. "
+    "The circular object with radius 1[m] located at (0,0) can be made with an inequality constraint. With the circle equation we can make sure $x$ and $y$ will be out of the circle at any time within phase A with a maximum of 10[m] distance. "
    ]
   },
   {
@@ -219,7 +219,7 @@
    "metadata": {},
    "source": [
     "## Endpoint constraints\n",
-    "To make sure all variables are continious, sometimes endpoint constraints need to be implemented. Endpoint constraints are constraintes which exist of initial and final variables. When final and initial states are not bound to a single value, phase A final states should match phase B initial states to make the states continious. Time variables are not constrained to be continious (yet), thus we can implement the following inequality constraint (final time phase A = initial time phase B -> final time phase A - initial time phase B = 0). In this example, x and y are constrainted to be continious due to the initial and final state constraints of both phases. The only constraint we'd like to implement to dx and dy is that the endpoints are corresponding and thus continious. This is done similarly as time."
+    "To make sure all variables are continious, sometimes endpoint constraints need to be implemented. Endpoint constraints are constraintes which exist of initial and final variables. When final and initial states are not bound to a single value, phase A final states should match phase B initial states to make the states continious. Time variables are not constrained to be continious (yet), thus we can implement the following inequality constraint (final time phase A = initial time phase B -> final time phase A - initial time phase B = 0). In this example, $x$ and $y$ are constrainted to be continious due to the initial and final state constraints of both phases. The only constraint we'd like to implement to $dx$ and $dy$ is that the endpoints are corresponding and thus continious. This is done similarly as time."
    ]
   },
   {
