--- a/docs/Examples/BlockSlide_1.ipynb
+++ b/docs/Examples/BlockSlide_1.ipynb
@@ -3,17 +3,25 @@
   {
    "attachments": {},
    "cell_type": "markdown",
+   "id": "b8ac7332",
+   "metadata": {},
+   "source": [
+    "# Single Phase"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
    "id": "4f1f4a98",
    "metadata": {},
    "source": [
-    "# Single Phase Example\n",
     "## OCP Description\n",
     "To first show simple implementation of an OptimalControlProblem(OCP) in pycollo we will solve a block slide. A block will be pushed in 1D by a force ($F_x$) and should reach a certain position ending with 0 speed with friction. The objective function is to minimize pushing force. To describe this problem we need two state variables (position $x$ and speed $dx$), one control variable (Applied force $F_x$), and three static parameters variables to describe friction (gravitation $g$, mass $m$, and coefficient of friction $\\mu$). We will introduce a second order differential by means of the state equations to be able to solve the differential equations for the equations of motion."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 1,
    "id": "48d93492",
    "metadata": {},
    "outputs": [],
@@ -51,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 2,
    "id": "36cc74de",
    "metadata": {},
    "outputs": [],
@@ -77,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 3,
    "id": "30bc9854",
    "metadata": {},
    "outputs": [],
@@ -97,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 4,
    "id": "e2c75a26",
    "metadata": {},
    "outputs": [],
@@ -117,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 5,
    "id": "1ac5247a",
    "metadata": {},
    "outputs": [],
@@ -139,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 6,
    "id": "6d278e6d",
    "metadata": {},
    "outputs": [],
@@ -159,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 7,
    "id": "876295ab",
    "metadata": {},
    "outputs": [],
@@ -180,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 8,
    "id": "8acb7b1f",
    "metadata": {},
    "outputs": [],
@@ -205,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 9,
    "id": "cf1c9e53",
    "metadata": {},
    "outputs": [],
@@ -225,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 10,
    "id": "e05fa48b",
    "metadata": {},
    "outputs": [],
@@ -249,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 11,
    "id": "519ea7d1",
    "metadata": {},
    "outputs": [],
@@ -272,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 12,
    "id": "1c33a6f7",
    "metadata": {},
    "outputs": [],
@@ -301,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 13,
    "id": "5164a6fb",
    "metadata": {},
    "outputs": [],
@@ -322,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 14,
    "id": "8874e0ff",
    "metadata": {},
    "outputs": [],
@@ -349,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 15,
    "id": "60af8ae8",
    "metadata": {},
    "outputs": [],
@@ -370,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 16,
    "id": "9851c13a",
    "metadata": {},
    "outputs": [],
@@ -389,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 17,
    "id": "0cfc0aa1",
    "metadata": {},
    "outputs": [
@@ -416,19 +424,26 @@
       "Initialising mesh iteration #1.\n",
       "===============================\n",
       "\n",
-      "Guess interpolated to iteration mesh in 655.46us.\n",
-      "Scaling initialised in 64.83us.\n",
-      "Initial guess scaled in 4.08us.\n",
-      "Scaling generated in 2.16ms.\n",
-      "NLP generated in 34.54ms.\n",
-      "Mesh-specific bounds generated in 206.12us.\n",
+      "Guess interpolated to iteration mesh in 1.65ms.\n",
+      "Scaling initialised in 120.83us.\n",
+      "Initial guess scaled in 21.12us.\n",
+      "Scaling generated in 2.18ms.\n",
+      "NLP generated in 71.56ms.\n",
+      "Mesh-specific bounds generated in 211.92us.\n",
       "\n",
-      "Mesh iteration #1 initialised in 37.64ms.\n",
+      "Mesh iteration #1 initialised in 75.74ms.\n",
       "\n",
       "\n",
       "==========================\n",
       "Solving mesh iteration #1.\n",
       "==========================\n",
+      "\n",
+      "\n",
+      "******************************************************************************\n",
+      "This program contains Ipopt, a library for large-scale nonlinear optimization.\n",
+      " Ipopt is released as open source code under the Eclipse Public License (EPL).\n",
+      "         For more information visit https://github.com/coin-or/Ipopt\n",
+      "******************************************************************************\n",
       "\n",
       "This is Ipopt version 3.14.11, running with linear solver MUMPS 5.2.1.\n",
       "\n",
@@ -480,23 +495,23 @@
       "Number of equality constraint Jacobian evaluations   = 13\n",
       "Number of inequality constraint Jacobian evaluations = 0\n",
       "Number of Lagrangian Hessian evaluations             = 12\n",
-      "Total seconds in IPOPT                               = 0.012\n",
+      "Total seconds in IPOPT                               = 0.035\n",
       "\n",
       "EXIT: Optimal Solution Found.\n",
       "      solver  :   t_proc      (avg)   t_wall      (avg)    n_eval\n",
-      "       nlp_f  |  13.00us (  1.00us)  11.88us (913.69ns)        13\n",
-      "       nlp_g  |  84.00us (  6.46us)  70.88us (  5.45us)        13\n",
-      "  nlp_grad_f  |  22.00us (  1.47us)  21.38us (  1.43us)        15\n",
-      "  nlp_hess_l  |  91.00us (  7.58us)  90.25us (  7.52us)        12\n",
-      "   nlp_jac_g  | 155.00us ( 11.07us) 158.04us ( 11.29us)        14\n",
-      "       total  |  12.79ms ( 12.79ms)  12.79ms ( 12.79ms)         1\n",
+      "       nlp_f  |  17.00us (  1.31us)  18.08us (  1.39us)        13\n",
+      "       nlp_g  | 156.00us ( 12.00us) 105.21us (  8.09us)        13\n",
+      "  nlp_grad_f  |  50.00us (  3.33us)  37.29us (  2.49us)        15\n",
+      "  nlp_hess_l  | 128.00us ( 10.67us) 116.25us (  9.69us)        12\n",
+      "   nlp_jac_g  | 189.00us ( 13.50us) 176.12us ( 12.58us)        14\n",
+      "       total  |  30.62ms ( 30.62ms)  46.53ms ( 46.53ms)         1\n",
       "\n",
       "==================================\n",
       "Post-processing mesh iteration #1.\n",
       "==================================\n",
       "\n",
-      "Mesh iteration #1 solved in 13.07ms.\n",
-      "Mesh iteration #1 post-processed in 23.62ms.\n",
+      "Mesh iteration #1 solved in 47.10ms.\n",
+      "Mesh iteration #1 post-processed in 25.05ms.\n",
       "\n",
       "\n",
       "============================\n",
@@ -509,7 +524,7 @@
       "\n",
       "Adjusting Collocation Mesh: [10] mesh sections\n",
       "\n",
-      "Mesh iteration #1 completed in 74.32ms.\n",
+      "Mesh iteration #1 completed in 147.89ms.\n",
       "\n"
      ]
     },
