--- a/docs/Examples/BlockSlide_2.ipynb
+++ b/docs/Examples/BlockSlide_2.ipynb
@@ -5,7 +5,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Multiphase Example\n",
+    "# Multiphase"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## OCP Description\n",
     "Let's introduce a second phase to the previous example where the block will have to return to it's original position. Because we know friction will switch direction when we slide the block back, the equations of motion change. One way of solving this optimization is to use a continious boolean function such as a [sigmoid function](https://en.wikipedia.org/wiki/Sigmoid_function). Due to the higher order optimization scheme pycollo uses, these functions are numerically unstable. Because we know when the equations change we can split up the optimization in two continious time phases to tackle this problem! Since phase A will not change, lets copy everything up until we start initiating the objective function. "
    ]
