--- a/docs/Examples/BlockSlide_3.ipynb
+++ b/docs/Examples/BlockSlide_3.ipynb
@@ -5,7 +5,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Path and Endpoint Constraints Example\n",
+    "# Path and Endpoint Constraints"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## OCP Description\n",
     "This example will show a more complex path constraint and how endpoint constraints are handeled. This example could be single phase because the dynamics do not change and all states are continious, but to explain how the endpoint constraints work the problem is split up into 2 phases.  \n",
     "\n",
